--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <div id="copyright">
-    <p id="copyright-notice">Licence MIT</p>
+    <p id="copyright-notice">© 2021 copyright Keelan Cook | You have express permission to cite anything you find here, but I do ask that you do not plagiarize this material and provide attribution when used.</p>
 </div>
