--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -347,7 +347,7 @@ hr {
 }
 
 .link-to-notes a {
-    color: #4183c4;
+    color: #00587E;
     text-decoration: none;
     font-family: 'IBM Plex Sans', 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 15px;
