copyright notice update

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <div id="copyright">
     <p id="copyright-notice">© 2021 copyright Keelan Cook</p>
-    <p id="copyright-notice">You have express permission to cite anything you find here, but I ask that you not plagiarize and provide attribution.</p>
+    <p id="copyright-notice">You have permission to cite anything you find here, but I ask that you not plagiarize and provide attribution.</p>
 </div>
