--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,7 +48,7 @@
                 <path d="M10 3.5L8 21.5"  stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M16 3.5L14 21.5"  stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>                               
-            <p class="categories-p">Books</p>
+            <p class="book-notes-p">Books</p>
             </a>
         </div>
         <div class="rss">
