--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,7 +40,7 @@
             <p class="categories-p">Tags</p>
             </a>
         </div>
-        <div class="book-notes">
+        <div class="booknotes">
             <a style="text-decoration: none;" href="/book-notes">
             <svg class="icon-category" width="18" height="19" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M4 9.5H20"  stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -48,7 +48,7 @@
                 <path d="M10 3.5L8 21.5"  stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M16 3.5L14 21.5"  stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>                               
-            <p class="book-notes-p">Books</p>
+            <p class="booknotes-p">Books</p>
             </a>
         </div>
         <div class="rss">
