--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,7 @@
             </div>
             <div class="userdesc">
                 <p class="title-sans">{{site.user_description}}</p>
+                If you want a place to start, you can <a href="https://commonplace.ml/notes/Comprehensive-Exam-Questions">start here</a>.
             </div> 
 
         </div>
