--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ h6 {
 
 h1, h2, h3, h4, h5, h6 {
     color: #00587E;
-    font-family:  Inter, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+    font-family:  'PT Sans', Inter, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
     font-weight: 600;
 }  
 
