--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,15 @@
 
 <header>
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-TKTW7W4HQ7"></script>
+   <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+     gtag('js', new Date());
+
+     gtag('config', 'G-TKTW7W4HQ7');
+   </script>
+    
     <div class="dashboard disable-select">
         <div class="site-heading profile-board-col">
            <h4 class="medium"><a href="/">{{site.title}}</a></h4>
