updating walmart affiliate info on commonplace

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -120,6 +120,6 @@
            });
 </script>
 
-<meta name='ir-site-verification-token' value='1348175164'>
-
+<!--Walmart Affiliates Verficiation Tag-->
+<meta name='ir-site-verification-token' value='-1252146790' />
 </header>
