--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div id="copyright">
-    <p id="copyright-notice">© 2021 copyright Keelan Cook</p>
+    <p id="copyright-notice">© 2021-2023 copyright Keelan Cook</p>
     <p id="copyright-notice">You have permission to cite anything you find here, but I ask that you not plagiarize and provide attribution. This site may earn from qualifying purchases as an Amazon Associate. </p>
     <a rel="me" href="https://mastodon.social/@keelan">
 </div>
